Edited wiki page GuiForBatchWiki through web user interface.

--- a/wiki/GuiForBatchWiki.wiki
+++ b/wiki/GuiForBatchWiki.wiki
@@ -1,4 +1,5 @@
-#summary One-sentence summary of this page.
+#summary Short user guide
+#labels Featured
 
 = Introduction =
 
@@ -7,7 +8,24 @@ Use this tool for batch-processing.
 
 = Details =
 
-Works with
+Works e.g. with
 
 * ffmpeg
 * ffmpeg2theora
+
+You can simply add some processing instructions to "converter.properties"
+
+These instructions can be applied to one file or a complete folder.
+All files into this folder will be processed.
+Note: You can comment/uncomment with #
+
+Syntax:
+
+(WIN | MAC) = <Command>;<Command>;...
+<Command> ::= <Path-to-tool> <Options>, <Output-modifier>, <File-extension> 
+
+Example Windows:
+WIN=binaries\\ffmpeg2theora.exe -v 4 -a 3,-o,_v4a3.ogg;binaries\\ffmpeg.exe -i,-b 64,_ffmpg.mpg
+
+Example Mac/Unix
+MAC=binaries/ffmpeg2theora -v 7 -a 3,-o,_v7a3.ogg;binaries/ffmpeg -i,-b 64,_ffmpg.mpg
