Edited wiki page GuiForBatchWiki through web user interface.

--- a/wiki/GuiForBatchWiki.wiki
+++ b/wiki/GuiForBatchWiki.wiki
@@ -5,7 +5,6 @@
 
 Use this tool for batch-processing.
 
-
 = Details =
 
 Works e.g. with
@@ -14,6 +13,9 @@ Works e.g. with
 * ffmpeg2theora
 
 You can simply add some processing instructions to "converter.properties"
+Place e.g. ffmpeg (http://www.ffmpeg.org) , ffmpeg.exe
+ffmpeg2theora, ffmpeg2theora.exe
+or any other command-line-tool into the binaries-folder.
 
 These instructions can be applied to one file or a complete folder.
 All files into this folder will be processed.
