--- a/wiki/GuiForBatchWiki.wiki
+++ b/wiki/GuiForBatchWiki.wiki
@@ -12,7 +12,7 @@ Works e.g. with
 * ffmpeg
 * ffmpeg2theora
 
-You can simply add some processing instructions to "converter.properties"
+You can simply add some processing instructions to "converter.properties".
 Place e.g. ffmpeg (http://www.ffmpeg.org) , ffmpeg.exe
 ffmpeg2theora, ffmpeg2theora.exe
 or any other command-line-tool into the binaries-folder.
